--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
 <body>
     <div class="after1">Extras de CSS</div>
     <div class="before1">Extras de CSS</div>
+    <button>Contraste</button>
 </body>
 </html>
